<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FormTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textSize="@dimen/text_size"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/age"
                android:inputType="numberDecimal"
                />

            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dob"
                android:textSize="@dimen/text_size"
                />

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:onClick="goToRegisterActivity"
                />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>